<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <EditText
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/five"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="8dp"
        android:hint="@string/Username"/>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/five"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="8dp"
        android:hint="@string/password"/>


    <EditText
        android:id="@+id/in_fName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/two"
        android:layout_marginTop="32dp"
        android:paddingStart="8dp"
        android:hint="@string/FirstName"/>

    <EditText
        android:id="@+id/in_lName"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/five"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingStart="8dp"
        android:hint="@string/LastName"/>
    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registrater"/>




</LinearLayout>