<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/login"
        android:layout_marginTop="20dp"
        />



    <EditText
        android:id="@+id/in_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/two"
        android:layout_marginTop="32dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/in_password"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/five"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SignUp"/>

</LinearLayout>